@@ -25,14 +25,13 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Contains a list of utility methods to work with Ballerina dependency graphs.
  *
  * @since 2.0.0
  */
-public class GraphUtils {
+public final class GraphUtils {
 
     private GraphUtils() {
     }
@@ -84,7 +83,7 @@ public class GraphUtils {
     }
 
     private static List<DependencyNode> getSortedCollection(Collection<DependencyNode> nodes) {
-        return nodes.stream().sorted(pkgDescComparator).collect(Collectors.toList());
+        return nodes.stream().sorted(pkgDescComparator).toList();
     }
 
     private static GraphComparisonResult reportGraphsWithDifferentNumberOfNodes(
